[package]
name = "kite"
version = "0.1.0"
edition = "2024"
description = "Zero-thought continuous synthesis"

[[bin]]
name = "kt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
hashbrown = { version = "0.16.1", features = ["serde"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
